--- a/src/Contact.css
+++ b/src/Contact.css
@@ -4,7 +4,7 @@
     z-index: 1;
     width: 100%;
     height: 90%; 
-     background-color:rgb(227, 104, 60);
+     /* background-color:rgb(227, 104, 60); */
     display: grid; 
 }
 .contact-container{
@@ -47,4 +47,11 @@ border-radius: 8px;
     font-size: 15px;
     cursor: pointer;
     width: 90%;
+}
+.contact-form{
+height: 100vh;
+margin: 50px;
+background:url('/header.webp') no-repeat ;
+background-size: contain;
+position: relative;
 }
