--- a/src/Signup.css
+++ b/src/Signup.css
@@ -4,7 +4,7 @@
     z-index: 1;
     width: 100%;
     height: 90%; 
-     background-color: rgb(58, 158, 158); 
+     /* background-color: rgb(58, 158, 158);  */
     display: grid; 
     }
     
@@ -63,4 +63,11 @@ border-radius: 8px;
     color: tomato;
     font-weight: 600;
     cursor: pointer;
+}
+.contact-form{
+height: 100vh;
+margin: 50px;
+background:url('/header.webp') no-repeat ;
+background-size: contain;
+position: relative;
 }
