--- a/src/Detail.css
+++ b/src/Detail.css
@@ -4,24 +4,31 @@ position: relative;
 left: 300px;
 border: none;
 width: 70%;
+
 }
 .table-data{
-background-color:silver;
-padding: 10px 10px 20px 20px;
+background-color:rgb(239, 128, 88);
+padding: 10px 10px 30px 30px;
 margin: 20px;
-
-
-
+color: white;
+font-size: 30px;
 }
 .table-data th{
  padding: 10px 10px; 
   
 }
 .data{
-   background-color:silver; 
+   background-color:rgb(239, 128, 88);
+}
+.data td{
+   padding: 10px 10px 20px 20px;  
+   color: white;
+   font-weight: 600;
 }
 .but{
     border: none;
-    background-color:silver; 
-    font-weight: 600;
+    background-color:rgb(239, 128, 88); 
+    font-weight: 700;
+    color: white;
+
 }
